intro updt, correction chap 2 updt

--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1866,3 +1866,12 @@
  volume = {39},
  year = {1977}
 }
+
+@article{Tang2021ARO,
+  title={A Review on Representative Swarm Intelligence Algorithms for Solving Optimization Problems: Applications and Trends},
+  author={Jun Tang and Gang Liu and Qingtao Pan},
+  journal={IEEE/CAA Journal of Automatica Sinica},
+  year={2021},
+  volume={8},
+  pages={1627-1643}
+}
